--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "kate-form-demo",
   "version": "1.1.0",
   "homepage": "https://romannep.github.io/kate-form-demo/",
+  "author": "Roman Nep <neproman@gmail.com>",
+  "license": "MIT",
   "dependencies": {
     "@material-ui/icons": "^1.1.0",
     "history": "^4.7.2",
